--- a/StudentAccount.WebAPI/StudentAccount.WebAPI.csproj
+++ b/StudentAccount.WebAPI/StudentAccount.WebAPI.csproj
@@ -24,7 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StudentBook.Domain\StudentBook.Domain.csproj" />
+    <ProjectReference Include="..\Roles\Roles.csproj" />
+    <ProjectReference Include="..\StudentBook.Domain\StudentAccount.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
